fix(HeaderButtons): fix alignment on not-found page layout

--- a/src/components/Header/HeaderButtons/HeaderButtons.module.scss
+++ b/src/components/Header/HeaderButtons/HeaderButtons.module.scss
@@ -15,7 +15,13 @@
 .headerButtons.notFoundPage {
   position: absolute;
   right: 20px;
-  top: 12px;
+  top: 20px;
+}
+
+@include m.large {
+  .headerButtons.notFoundPage {
+    top: 10px;
+  }
 }
 
 html[lang=ar] .headerButtons.notFoundPage {
